<resources>
    <!-- General strings -->
    <string name="app_name">ToDoo</string>

    <!-- Login Activity && Register Activity -->
    <string name="example_mail">user@mail.com</string>
    <string name="example_password">*****</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account...</string>
    <string name="register">register</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="password_confirm">Confirm password</string>

    <!-- Error -->
    <string name="error_missing">%1$s is missing</string>
    <string name="error_password">Passwords do not match</string>


    <string name="add_project">Add project</string>
    <string name="settings">Settings</string>
    <string name="client">Client</string>
    <string name="name">Name</string>
    <string name="deadline">Deadline</string>
    <string name="set_date">Set date</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="sync_users_message">Synchronizing users...</string>
    <string name="sync_projects_message">Synchronizing projects...</string>
    <string name="manager">Manager</string>
    <string name="creating_project">Creating project...</string>
    <string name="volley_request_fail">Request failed please try again!</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="status_update_project">Updating project...</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="active_tasks">Active tasks</string>
    <string name="delete">Delete</string>
    <string name="members">Members</string>
    <string name="add_task">add task</string>
    <string name="add_category">add category</string>
    <string name="est_time">Estimated time</string>
    <string name="member">Member</string>
    <string name="category">Category</string>
    <string name="creating_task">Creating task...</string>
    <string name="item_description">%1$s description</string>
    <string name="completed">Completed</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="example_first_name">Pero</string>
    <string name="example_last_name">Peric</string>
    <string name="add">Add</string>
</resources>
