<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.jbajic.todoo.LoginActivity">

    <TextView
        style="@style/LogoTextStyle"
        android:gravity="center"
        android:text="@string/app_name" />

    <LinearLayout
        style="@style/MatchWidth"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/big3">

        <LinearLayout style="@style/MatchWidth">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/email" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/example_mail"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout style="@style/MatchWidth">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/example_password"
                android:inputType="textPassword" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        style="@style/PinkButtonStyle"
        android:text="@string/login" />

</LinearLayout>
