<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentVertical"
    tools:context="com.jbajic.todoo.RegisterActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout style="@style/MatchParentVerticalCenter">

        <TextView
            style="@style/LogoTextStyle"
            android:text="@string/register" />

        <LinearLayout
            style="@style/MatchWidth"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/bigPadding1">

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/example_mail"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/example_password"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout style="@style/MatchWidth">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/password_confirm" />

                <EditText
                    android:id="@+id/et_password_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/example_password"
                    android:inputType="textPassword" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            style="@style/PinkButtonStyle"
            android:text="@string/sign_up" />

        <ProgressBar
            android:id="@+id/pb_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
