<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentVertical"
    tools:context="com.jbajic.todoo.AddProjectActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout style="@style/MatchParentVertical">

        <LinearLayout style="@style/MatchWidth">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />

        </LinearLayout>

        <LinearLayout style="@style/MatchWidth">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/client" />

            <EditText
                android:id="@+id/et_client"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />

        </LinearLayout>

        <LinearLayout
            style="@style/MatchWidth"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/deadline" />

            <TextView
                android:id="@+id/tv_deadline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <Button
                android:id="@+id/bt_setDeadline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/set_date" />

        </LinearLayout>

        <LinearLayout style="@style/MatchWidth">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/description" />

            <EditText
                android:id="@+id/et_body"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />

        </LinearLayout>

        <LinearLayout
            style="@style/MatchWidth"
            android:gravity="center">

            <Button
                android:id="@+id/bt_createProject"
                style="@style/PinkButtonStyle"
                android:text="@string/create" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
