<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentVertical"
    tools:context="com.jbajic.todoo.ProjectActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        style="@style/MatchParentVertical"
        android:padding="@dimen/smallPadding2">

        <TextView
            android:id="@+id/tv_projectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bigTextSize13"
            tools:text="Project name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/mediumPadding2"
                android:orientation="vertical">

                <LinearLayout style="@style/WrapContent">

                    <TextView
                        style="@style/WrapContent"
                        android:layout_marginEnd="@dimen/smallPadding1"
                        android:text="@string/deadline"
                        android:textSize="@dimen/mediumTextSize11" />

                    <TextView
                        android:id="@+id/tv_projectDeadline"
                        style="@style/WrapContent"
                        android:textSize="@dimen/mediumTextSize11"
                        tools:text="20.03.2018." />

                </LinearLayout>

                <LinearLayout style="@style/WrapContent">

                    <TextView
                        style="@style/WrapContent"
                        android:layout_marginEnd="@dimen/smallPadding1"
                        android:text="@string/client"
                        android:textSize="@dimen/mediumTextSize11" />

                    <TextView
                        android:id="@+id/tv_projectClient"
                        style="@style/WrapContent"
                        android:textSize="@dimen/mediumTextSize11"
                        tools:text="Jure Bajic" />

                </LinearLayout>

                <LinearLayout style="@style/WrapContent">

                    <TextView
                        style="@style/WrapContent"
                        android:layout_marginEnd="@dimen/smallPadding1"
                        android:text="@string/active_tasks"
                        android:textSize="@dimen/mediumTextSize11" />

                    <TextView
                        android:id="@+id/tv_numberOfActiveTasks"
                        style="@style/WrapContent"
                        android:textSize="@dimen/mediumTextSize11"
                        tools:text="14" />

                </LinearLayout>

                <LinearLayout style="@style/WrapContent">

                    <TextView
                        style="@style/WrapContent"
                        android:layout_marginEnd="@dimen/smallPadding1"
                        android:text="@string/completed_tasks"
                        android:textSize="@dimen/mediumTextSize11" />

                    <TextView
                        android:id="@+id/tv_numberOfCompletedTasks"
                        style="@style/WrapContent"
                        android:textSize="@dimen/mediumTextSize11"
                        tools:text="14" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout style="@style/MatchHeightVertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="@dimen/mediumTextSize11" />

                <TextView
                    android:id="@+id/tv_projectBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mediumTextSize11"
                    tools:text="This is a default project description" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/smallPadding3"
            android:layout_marginTop="@dimen/smallPadding3"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallPadding3">

            <Button
                android:id="@+id/btn_deleteProject"
                style="@style/ButtonProjectStyle"
                android:background="@color/deleteColor"
                android:text="@string/delete" />

            <Button
                android:id="@+id/btn_addCategory"
                style="@style/ButtonProjectStyle"
                android:background="@color/createColor"
                android:text="@string/add_category" />

            <Button
                android:id="@+id/btn_addTask"
                style="@style/ButtonProjectStyle"
                android:background="@color/createColor"
                android:text="@string/add_task" />

            <Button
                android:id="@+id/btn_viewMembers"
                style="@style/ButtonProjectStyle"
                android:background="@color/infoColor"
                android:text="@string/members" />

        </LinearLayout>

        <ExpandableListView
            android:id="@+id/elv_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>
